@@ -1,6 +1,5 @@
 
                  AceQL Python Client SDK
-                      Version 3.2.2
                       Release Notes
 
 
@@ -18,6 +17,15 @@ they would for a local database.
 
 The AceQL Python Client SDK is licensed under the Apache 2.0
 License.
+
+
+AceQL Python Client SDK - Version 3.3 - 11-Nov-2020
+-----------------------------------------------------
+
+What's New:
+- The new Connection.add_request_headers()  and
+  Connection.reset_request_headers() methods respectively allow
+  to  set or reset request headers for the session.
 
 
 AceQL Python Client SDK - Version 3.2.2 - 28-Jul-2020
